--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <style>
+
+.page-footer{
+    background-color: #ffebcd!important;
+}
   .parallax {
     /* The image used */
     background-image: url("https://www.w3schools.com/howto/img_parallax.jpg");    background: url(https://img.spicinemas.in/resources/images/spi-background-single.jpg) no-repeat fixed top #000;
@@ -17,7 +21,7 @@ position: relative;
   }
   </style>
 
-<body >
+
   <div class="container">
 
 
@@ -27,9 +31,7 @@ position: relative;
     <div class="row">
 
 <div class="col-sm-12" style="text-align:center" >
-    <h1>
-      Welcome to {{ title }}! </h1>
-
+    
 
  <app-navigator></app-navigator>
  <!-- <app-register></app-register> -->
@@ -43,8 +45,77 @@ position: relative;
 
 
     </div>
+<!-- Footer -->
+<footer class="page-footer font-small blue pt-4">
 
+  <!-- Footer Links -->
+  <div class="container-fluid text-center text-md-left">
+
+    <!-- Grid row -->
+    <div class="row">
+
+      <!-- Grid column -->
+      <div class="col-md-6 mt-md-0 mt-3">
+
+        <!-- Content -->
+        <h5 class="text-uppercase">Satyam Cinema's</h5>
+        <p>This movie website was developed on Angular JS </p>
+
+      </div>
+      <!-- Grid column -->
+
+      <hr class="clearfix w-100 d-md-none pb-3">
+
+      <!-- Grid column -->
+      <div class="col-md-3 mb-md-0 mb-3">
+
+          <!-- Links -->
+          <h5 class="text-uppercase">Credits</h5>
+
+          <ul class="list-unstyled">
+            <li>
+              koushikraj
+            </li>
+            <li>
+             www.w3schools.com
+            </li>
+            <li>
+              Tour of heroes
+            </li>
+           
+          </ul>
+
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-3 mb-md-0 mb-3">
+
+          <!-- Links -->
+          <h5 class="text-uppercase">Lecturer</h5>
+
+          <ul class="list-unstyled">
+            <li>
+              John Rowley
+            </li>
+            
+          </ul>
+
+        </div>
+        <!-- Grid column -->
+
+    </div>
+    <!-- Grid row -->
+
+  </div>
+  <!-- Footer Links -->
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2018 Copyright:10506917@mydbs.com
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
 </div>
 
-
-</body>
