--- a/src/app/booking-list/booking-list.component.html
+++ b/src/app/booking-list/booking-list.component.html
@@ -1,75 +1,4 @@
-
-<style>/* The Modal (background) */
-    .modal {
-    
-      position: fixed; /* Stay in place */
-      z-index: 1; /* Sit on top */
-      padding-top: 100px; /* Location of the box */
-      left: 0;
-      top: 0;
-      width: 100%; /* Full width */
-      height: 100%; /* Full height */
-      overflow: auto; /* Enable scroll if needed */
-      background-color: rgb(0,0,0); /* Fallback color */
-      background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-    }
-    
-    /* Modal Content */
-    .modal-content {
-      position: relative;
-      background-color: #fefefe;
-      margin: auto;
-      padding: 0;
-      border: 1px solid #888;
-      width: 80%;
-      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-      -webkit-animation-name: animatetop;
-      -webkit-animation-duration: 0.4s;
-      animation-name: animatetop;
-      animation-duration: 0.4s
-    }
-    
-    /* Add Animation */
-    @-webkit-keyframes animatetop {
-      from {top:-300px; opacity:0} 
-      to {top:0; opacity:1}
-    }
-    
-    @keyframes animatetop {
-      from {top:-300px; opacity:0}
-      to {top:0; opacity:1}
-    }
-    
-    /* The Close Button */
-    .close {
-      color: white;
-      float: right;
-      font-size: 38px;
-      font-weight: bold;
-    }
-    
-    .close:hover,
-    .close:focus {
-      color:#FFEB3B;;
-      text-decoration: none;
-      cursor: pointer;
-    }
-    
-    .modal-header {
-      padding: 2px 16px;
-      background-color:#002f4e;;
-      color: white;
-    }
-    
-    .modal-body {padding: 2px 16px;}
-    
-    .modal-footer {
-      padding: 2px 16px;
-      background-color:  #002f4e;;
-      color: white;
-    }
-    </style>
-
+<!-- koushikraj Rajendran-10506917 -->
 <div id="myModal" class="modal" [style.display]="mDisplay? 'block' : 'none' " >
 
     <!-- Modal content -->
@@ -79,7 +8,8 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
            crossorigin="anonymous"></script>
-     
+           <form #regForm="ngForm" [formGroup]="contactForm" (ngSubmit) = "onClickSubmit(contactForm.value)" >
+
       <div class="modal-header">
           <h2>Movie:{{selectedShow.show}}<br>
             Time:{{selectedShow.showTime}}</h2>
@@ -87,13 +17,12 @@
         
       </div>
       <div class="modal-body">
-          <form #heroForm="ngForm" [formGroup]="contactForm" (ngSubmit) = "onClickSubmit(contactForm.value)" >
               <!-- <div formGroupName="dat" novalidate> -->
                   <input type="hidden" formControlName="id" name="id" />
     <input type="hidden" formControlName="show" name="show" />
     <input type="hidden" formControlName="showTime" name="showTime" />
     <input type="hidden" formControlName="day" name="day" />
-    <table>
+    <table >
 <tr>
   <td>
     Adult
@@ -122,7 +51,7 @@
       <td>
           <input formControlName="student"   [(ngModel)]="student" type="number"  min=0 max=5>
         </td>
-        <td>{{student*10.25}}</td>
+        <td>{{student*10.00}}</td>
     </tr>
     <tr>
         <td>
@@ -152,26 +81,17 @@
           <td>{{(adult*13.25)+(student*10.00)+(child*8.25)+(combo1*6)+(combo2*7.30)}}</td>
         </tr>
     </table>
-              <!-- <input type="hidden" class="fortextbox" name="emailid" placeholder="emailid" 
-                 formControlName="emailid">
-              <br/>
-               -->
-              <!-- <input type="password" class="fortextbox" name="passwd" 
-                 placeholder="passwd" formControlName="passwd">
-              <br/> -->
-              <!-- </div> -->
-              
-              <input type="submit" class="forsubmit" value="Book">
-              <button type="button" class="btn btn-default" (click)="heroForm.reset()">New Hero</button>
-
-           </form>
-           <p>
-              Email entered is : {{emailid}}
-           </p>
+             
+         
+         
       </div>
       <div class="modal-footer">
-        <h3>Modal Footer</h3>
+        
+            <!-- <input type="submit" class="forsubmit" value="Book"> -->
+            <button type="submit" class="btn btn-success" >Book</button>
+            <button type="button" class="btn btn-danger" (click)="regForm.reset()">Cancel</button>
       </div>
+    </form>
     </div>
   
   </div>
