--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,125 +1,4 @@
-
-<style>
-.btn-info,.btn-warning{
-  border-radius:10px;
-  padding: 6px 10px;
-    margin: 6px;
-    border-radius: 12px;
-    box-shadow: 1px 3px 2px 0px black; }
-
-.ticket {
-    background-color: #ffc7068a; 
-    color: white;
-    border: 2px solid #ffc7068a;
-    border-radius: 18px
-  }
-  
-  .ticket:hover {
-    background-color: white;
-    color: white;
-  }
-  
-  .trailor {
-    background-color: #ffc7068a; 
-    color: white;
-    border: 2px solid #ffc7068a;
-    border-radius: 18px
-  }
-  
-  .trailor:hover {
-    background-color: white;
-    color: white;
-  }
-  a:link {
-    text-decoration: none;
-    color: white;
-  }
-  
-  a:visited {
-    text-decoration: none;
-  }
-
- @media all and (min-width: 801px) {
-  
-
-}
-@media all and (max-width: 800px) and (orientation:landscape) {
-  .modal-body {padding: 2px 16px; height:250px !important;}
-  .modal{padding-top: 18px !important;}
-}
-
-
-.carousel-item {
-    height: 65vh;
-    min-height: 350px;
-    background: no-repeat center center scroll;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-  }
-  
-
-  .image{
-      width:500px;
-      height:250px !important;
-  }
-  .col-md-8 img{
-      width:600px;
-      height:320px !important;
-  }
- iframe{
-  width: -webkit-fill-available;
-    height: -webkit-fill-available;
-
-  }
-  .overlay-image {
- position: relative;
- width: 100%;
-}
-/* Original image */
-.overlay-image .image {
- display: block;
- width: 100%;
- height: auto;
-}
-/* Original text overlay */
-.overlay-image .text {
- color: #fff;
- font-size: 30px;
- line-height: 1.5em;
- text-shadow: 2px 2px 2px #000;
- text-align: left;
- position: absolute;
- top: 50%;
- left: 50%;
- transform: translate(-50%, -50%);
- width: 100%;
-}
-.overlay-image .normal {
- transition: .5s ease;
-}
-.overlay-image:hover .normal {
- opacity: 0;
-}
-.overlay-image .hover {
- background-color: rgba(0,0,0,0.5);
-}
-/* New overlay on hover */
-.overlay-image .hover {
- position: absolute;
- top: 0;
- height: 100%;
- width: 100%;
- opacity: 0;
- transition: .5s ease;
-}
-/* New overlay appearance on hover */
-.overlay-image:hover .hover {
- opacity: 1;
-}
-  </style>
-
+<!-- koushikraj Rajendran-10506917 -->
  <!-- Page Content -->
 <div class="container">
 
@@ -168,7 +47,7 @@
               <div class="hover">
                <div class="text" style="font-size: medium">{{movie.title}} <br>{{movie.genre}}<br> Director:{{movie.director}}<br>
                 <a routerLink="/movie/{{i+1}}" routerLinkActive="active">  <button class="btn-info" >Tickets</button></a>
-                <button class="btn-warning" (click)=toggle(i)> Trailor</button>
+                <button class="btn-warning" (click)=toggle(i)> Trailer</button>
               </div>
               </div>
              </div>
@@ -187,76 +66,7 @@
   
   <!-- /.container -->
   
-<style>/* The Modal (background) */
-  .modal {
-  
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  }
-  
-  /* Modal Content */
-  .modal-content {
-    position: relative;
-    background-color: #fefefe;
-    margin: auto;
-    padding: 0;
-    border: 1px solid #888;
-    width: 80%;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-    -webkit-animation-name: animatetop;
-    -webkit-animation-duration: 0.4s;
-    animation-name: animatetop;
-    animation-duration: 0.4s
-  }
-  
-  /* Add Animation */
-  @-webkit-keyframes animatetop {
-    from {top:-300px; opacity:0} 
-    to {top:0; opacity:1}
-  }
-  
-  @keyframes animatetop {
-    from {top:-300px; opacity:0}
-    to {top:0; opacity:1}
-  }
-  
-  /* The Close Button */
-  .close {
-    color: white;
-    float: right;
-    font-size: 38px;
-    font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color:#FFEB3B;;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  
-  .modal-header {
-    padding: 2px 16px;
-    background-color:#002f4e;;
-    color: white;
-  }
-  
-  .modal-body {padding: 2px 16px; height:350px;}
-  
-  .modal-footer {
-    padding: 2px 16px;
-    background-color:  #002f4e;;
-    color: white;
-  }
-  </style>
+
 
 <div id="myModal" class="modal" [style.display]="display? 'block' : 'none' ">
 
