--- a/src/app/movie-desc/movie-desc.component.html
+++ b/src/app/movie-desc/movie-desc.component.html
@@ -1,168 +1,5 @@
 
-<style>
-.card-header {
-
-  background: #5077f2
-}
-
-.btn-link {
-    color: #5077f2;
-    text-decoration: none;
-    width: -webkit-fill-available;
-}
-.run{
-  padding: 6px 10px;
-    margin: 6px;
-    border-radius: 12px;
-    /* text-shadow: 0 0 black; */
-    box-shadow: 1px 3px 2px 0px black;
-}
-.card-header .btn.btn-link.collapsed{
-width:100%;
-}
-.carousel-item {
-    height: 65vh;
-    min-height: 350px;
-    background: no-repeat center center scroll;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-  }
-  
-
-  img{
-      width:500px;
-      height:250px !important;
-  }
-  .col-md-8 img{
-      width:600px;
-      height:320px !important;
-  }
- iframe{
-  width: -webkit-fill-available;
-    height: -webkit-fill-available;
-
-  }
-  .overlay-image {
- position: relative;
- width: 100%;
-}
-/* Original image */
-.overlay-image .image {
- display: block;
- width: 100%;
- height: auto;
-}
-/* Original text overlay */
-.overlay-image .text {
- color: #fff;
- font-size: 30px;
- line-height: 1.5em;
- text-shadow: 2px 2px 2px #000;
- text-align: center;
- position: absolute;
- top: 50%;
- left: 50%;
- transform: translate(-50%, -50%);
- width: 100%;
-}
-.overlay-image .normal {
- transition: .5s ease;
-}
-.overlay-image:hover .normal {
- opacity: 0;
-}
-.overlay-image .hover {
- background-color: rgba(0,0,0,0.5);
-}
-/* New overlay on hover */
-.overlay-image .hover {
- position: absolute;
- top: 0;
- height: 100%;
- width: 100%;
- opacity: 0;
- transition: .5s ease;
-}
-/* New overlay appearance on hover */
-.overlay-image:hover .hover {
- opacity: 1;
-}
-
-
-
-  
-/* The Modal (background) */
-  .modal {
-  
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  }
-  
-  /* Modal Content */
-  .modal-content {
-    position: relative;
-    background-color: #fefefe;
-    margin: auto;
-    padding: 0;
-    border: 1px solid #888;
-    width: 80%;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-    -webkit-animation-name: animatetop;
-    -webkit-animation-duration: 0.4s;
-    animation-name: animatetop;
-    animation-duration: 0.4s
-  }
-  
-  /* Add Animation */
-  @-webkit-keyframes animatetop {
-    from {top:-300px; opacity:0} 
-    to {top:0; opacity:1}
-  }
-  
-  @keyframes animatetop {
-    from {top:-300px; opacity:0}
-    to {top:0; opacity:1}
-  }
-  
-  /* The Close Button */
-  .close {
-    color: white;
-    float: right;
-    font-size: 38px;
-    font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color:#FFEB3B;;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  
-  .modal-header {
-    padding: 2px 16px;
-    background-color:#002f4e;;
-    color: white;
-  }
-  
-  .modal-body {padding: 2px 16px; height:350px;}
-  
-  .modal-footer {
-    padding: 2px 16px;
-    background-color:  #002f4e;;
-    color: white;
-  }
-  </style>
+<!-- koushikraj Rajendran-10506917 -->
  <!-- Page Content -->
 <div class="container">
 
@@ -184,7 +21,7 @@ width:100%;
            <b> Director:</b>{{movie.director}}
     
             <br>
-            <button class="btn-warning run" (click)="toggle(0)">Trailer</button>
+            <button class="btn-warning run" (click)="toggleTrailer(i-1)">Trailer</button>
     
           </div>
     
@@ -258,16 +95,16 @@ width:100%;
      
       <div class="modal-header">
          
-        <span class="close trailer" (click) ="toggle()">&times;</span>
+        <span class="close trailer" (click) ="toggleTrailer()">&times;</span>
         
       </div>
       <div class="modal-body">
         
-        <iframe  src="https://www.youtube.com/embed/EuOlYPSEzSc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe [src]="safeSrc"  src="https://www.youtube.com/embed/EuOlYPSEzSc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
    
       </div>
       <div class="modal-footer">
-        <h3>Modal Footer</h3>
+        <h3></h3>
       </div>
     </div>
    
