--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,36 +1,4 @@
-<!-- Template from bootsnip.com -->
-
-<style>
-
-.note
-{
-    text-align: center;
-    height: 80px;
-    background: -webkit-linear-gradient(left, #0072ff, #8811c5);
-    color: #fff;
-    font-weight: bold;
-    line-height: 80px;
-}
-.form-content
-{
-    padding: 5%;
-    border: 1px solid #ced4da;
-    margin-bottom: 2%;
-}
-.form-control{
-    border-radius:1.5rem;
-}
-.btnSubmit
-{
-    border:none;
-    border-radius:1.5rem;
-    padding: 1%;
-    width: 20%;
-    cursor: pointer;
-    background: #0062cc;
-    color: #fff;
-}
-</style>
+<!-- koushikraj Rajendran-10506917 -->
 <div class="container register-form">
   <div class="form">
       <div class="note">
@@ -45,15 +13,15 @@
                       <input  formControlName="name" type="text" class="form-control" placeholder="Your Name *" value=""/>
                   </div>
                   <div class="form-group">
-                      <input   formControlName="phoneNo" type="text" class="form-control" placeholder="Phone Number *" value=""/>
+                      <input   formControlName="phoneNo" type="number"  max=10 class="form-control" placeholder="Phone Number *" value=""/>
                   </div>
               </div>
               <div class="col-md-6">
                   <div class="form-group">
-                      <input  formControlName="email" type="text" class="form-control" placeholder="Email Id *" value=""/>
+                      <input  formControlName="email" type="email" class="form-control" placeholder="Email Id *" value=""/>
                   </div>
                   <div class="form-group">
-                      <input  formControlName="pswd" type="email" class="form-control" placeholder="Your Password *" value=""/>
+                      <input  formControlName="pswd" type="password" class="form-control" placeholder="Your Password *" value=""/>
                   </div>
               </div>
           </div>
