--- a/src/app/showtimes/showtimes.component.html
+++ b/src/app/showtimes/showtimes.component.html
@@ -1,4 +1,4 @@
-
+<!-- koushikraj Rajendran-10506917 -->
  <html lang="en">
     <!-- https://pastebin.com/vVbL8b4d -->
     <head>
@@ -80,10 +80,7 @@
           </app-booking-list>
 
 </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-       crossorigin="anonymous"></script>
+    
    
 </body>
 
