--- a/src/app/booking-list/booking-list.component.html
+++ b/src/app/booking-list/booking-list.component.html
@@ -55,7 +55,8 @@
     </tr>
     <tr>
         <td>
-          Combo 1
+          Combo 1<br>
+          (popcorn+coke)
         </td>
         <td> €6.00</td>
         <td>
@@ -65,7 +66,8 @@
       </tr>
       <tr>
           <td>
-            Combo 2
+            Combo 2<br>
+            (popcorn+coke*2)
           </td>
           <td> €7.30</td>
           <td>
