--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,6 +1,7 @@
 <!-- koushikraj Rajendran-10506917 -->
 <div class="container register-form">
   <div class="form">
+        <a class="nav-link" style="width:0px;" href="#">Home</a>
       <div class="note">
           <p>Registeration.</p>
       </div>
