--- a/src/app/seating/seating.component.css
+++ b/src/app/seating/seating.component.css
@@ -115,7 +115,7 @@ input[type=checkbox] {
 
     }
 }
-@media all and (max-width: 800px) {
+@media all and (max-width: 800px) and (orientation:landscape){
   input[type=checkbox] + label
     {
     background-image: url("/assets/seatA.svg") ;
